fixed BlogPost 'feedback-buttons' element not being resized properly on small displays

--- a/src/styles/pages/BlogPost.css
+++ b/src/styles/pages/BlogPost.css
@@ -114,7 +114,7 @@
     }
 
     @media (max-width: 768px) {
-        .feedback {
+        .feedback-buttons {
             flex-direction: column;
         }
         .feedback-button {
